k8s/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-04-04T05:43:16Z"
  labels:
    app: samtal-ghost
    chart: ghost-9.1.16
    heritage: Helm
    release: samtal-ghost
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
          f:chart: {}
          f:heritage: {}
          f:release: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Go-http-client
    operation: Update
    time: "2020-04-04T05:43:16Z"
  name: samtal-ghost
  namespace: default
  resourceVersion: "10430615"
  selfLink: /api/v1/namespaces/default/services/samtal-ghost
  uid: 9b523811-62d6-4bdd-8546-4f0ea0326318
spec:
  clusterIP: 10.152.183.238
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32455
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: samtal-ghost
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
