k8s/ghost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  generation: 1
  labels:
    app: samtal-ghost
  name: samtal-ghost
  namespace: samtalio
spec:
  rules:
  - host: vrmeet.io
    http:
      paths:
      - backend:
          serviceName: samtal-ghost
          servicePort: http
        path: /
  tls:
  - hosts:
    - vrmeet.io
    secretName: samtal-ghost-prod-tls
