k8s/rtmp-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp
spec:
  ports:
    - protocol: TCP
      port: 1935
      targetPort: 1935

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtmp
spec:
  selector:
    matchLabels:
      app: rtmp
  template:
    metadata:
      labels:
        app: rtmp
    spec:
      containers:
      - name: rtmp
        image: alfg/nginx-rtmp
        ports:
        - containerPort: 1935
        - containerPort: 8080
        
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rtmp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - rtmp.snowflake.cash
    - rtmp.samtal.io
    secretName: rtmp-prod-tls
  rules:
  - host: rtmp.snowflake.cash
    http:
      paths:
      - backend:
          serviceName: rtmp
          servicePort: 8080
  - host: rtmp.samtal.io
    http:
      paths:
      - backend:
          serviceName: rtmp
          servicePort: 8080
