k8s/stage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stage
spec:
  ports:
  - port: 8000
  type: LoadBalancer
  selector:
    app: stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage
spec:
  selector:
    matchLabels:
      app: stage
  template:
    metadata:
      labels:
        app: stage
    spec:
      containers:
      - name: stage
        image: irony/stage
        ports:
        - containerPort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stage-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - demo.vrmeet.io
    secretName: stage-prod-tls
  rules:
  - host: demo.vrmeet.io
    http:
      paths:
      - backend:
          serviceName: stage
          servicePort: 8000
